RESOLVED FIXED134548
[GStreamer] MediaPlayerPrivateGStreamer.cpp fails to build when VIDEO_TRACK is enabled and using GSTREAMER_MPEGTS
https://bugs.webkit.org/show_bug.cgi?id=134548
Summary [GStreamer] MediaPlayerPrivateGStreamer.cpp fails to build when VIDEO_TRACK i...
Carlos Garcia Campos
Reported 2014-07-02 08:39:04 PDT
I don't know why it doesn't happen when using build-webkit + ninja, bue when building directly with cmake I got this: In file included from /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashMap.h:25:0, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/URL.h:30, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/graphics/MediaPlayer.h:36, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/graphics/MediaPlayerPrivate.h:31, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:28, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:29, from /home/cgarcia/src/git/gnome/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:26: /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashTable.h: In instantiation of 'static bool WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::isDeletedBucket(const ValueType&) [with Key = WTF::AtomicString; Value = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >; Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> > >; HashFunctions = WTF::AtomicStringHash; Traits = WTF::HashMap<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >::KeyValuePairTraits; KeyTraits = WTF::HashTraits<WTF::AtomicString>; WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::ValueType = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >]': /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashTable.h:1050:42: required from 'static void WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::deallocateTable(WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::ValueType*, int) [with Key = WTF::AtomicString; Value = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >; Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> > >; HashFunctions = WTF::AtomicStringHash; Traits = WTF::HashMap<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >::KeyValuePairTraits; KeyTraits = WTF::HashTraits<WTF::AtomicString>; WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::ValueType = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >]' /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashTable.h:353:53: required from 'WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::~HashTable() [with Key = WTF::AtomicString; Value = WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >; Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> > >; HashFunctions = WTF::AtomicStringHash; Traits = WTF::HashMap<WTF::AtomicString, WTF::RefPtr<WebCore::InbandMetadataTextTrackPrivateGStreamer> >::KeyValuePairTraits; KeyTraits = WTF::HashTraits<WTF::AtomicString>]' /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashMap.h:36:7: required from here /home/cgarcia/src/git/gnome/WebKit/Source/WTF/wtf/HashTable.h:399:121: error: 'isDeletedValue' is not a member of 'WTF::HashTraits<WTF::AtomicString>' And a lot of other cryptic C++ errors
Attachments
Patch (1.47 KB, patch)
2014-07-02 08:41 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-07-02 08:41:27 PDT
Carlos Garcia Campos
Comment 2 2014-07-02 09:03:28 PDT
Note You need to log in before you can comment on or make changes to this bug.