[GStreamer] MediaPlayerPrivateGStreamer.cpp fails to build when VIDEO_TRACK is enabled and using GSTREAMER_MPEGTS https://bugs.webkit.org/show_bug.cgi?id=134548

Reviewed by Philippe Normand.

Include AtomicStringHash.h when ENABLE(VIDEO_TRACK) && USE(GSTREAMER_MPEGTS)
since it's used by HashMap<AtomicString, RefPtr<InbandMetadataTextTrackPrivateGStreamer>>

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/152536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170709 268f45cc-cd09-0410-ab3c-d52691b4dbfc